# local-ocr-testing

./: .gitignore  AGENTS.md  README.md  STRUCTURE.md
deepseek-ocr/: README.md  main.py  pyproject.toml
experiments/: README.md
experiments/deepseek-ocr/: README.md  pyproject.toml
experiments/qwen3/: README.md  main.py
qwen3/: README.md  main.py  pyproject.toml
qwen3_pdf/: README.md  converter.py  pdf_workflow.py  viewer.py
workflows/: README.md
workflows/qwen3_pdf/: .gitignore  .proposal  ALIBABA_CLOUD_GUIDE.md  IMPLEMENTATION_ALIBABA_CLOUD.md  PROVIDER_QUICK_REF.md  README.md  REFACTORING_NOTES.md  config.py  pdf_workflow.py  pyproject.toml  pyproject_toml_for_vllm  viewer.py
workflows/qwen3_pdf/providers/: README.md  __init__.py  alibaba_cloud.py  base.py  local.py  openai_compatible.py  vllm.py
